# fl_tutorials

./: .gitignore  .python-version  README.md  pyproject.toml  setup.py
centralised_to_federated/: utils.py
centralised_to_federated/solution/: client.py  common.py  create_partitions.py  server.py
shared/: utils.py
tutorial_1_centralised_to_federated/: centralised.py  client.py  run.sh  server.py  simulation.py
tutorial_1_centralised_to_federated/solution/: client.py  create_partitions.py  server.py
tutorial_2_building_a_strategy/: run.sh  server.py  strategy.py
tutorial_2_building_a_strategy/solution/: README.md  run.sh  server.py  strategy.py
tutorial_3_heterogeneity/: fedprox_client.py  run.sh  server.py
tutorial_3_heterogeneity/solution/: fedprox_client.py  run.sh  strategy.py
tutorials/2_building_a_strategy/solution/: strategy.py
tutorials/3_heterogeneity/solution/: fedprox_client.py
tutorials/building_a_strategy/: strategy.py
tutorials/building_a_strategy/solution/: strategy.py
tutorials/centralised_to_federated/: README.md  centralised.py
tutorials/centralised_to_federated/solution/: client.py
tutorials/heterogeneity/: fedprox_client.py
tutorials/shared/: utils.py
