[tool.poetry]
name = "camlsys - tutorials in federated learning"
version = "0.1.0"
description = "This package contains the necessary libraries to run the CaMLSys tutorials in Federated Learning."
authors = ["Pedro Porto Buarque de Gusmão <pedropgusmao@gmail.com>"]
license = "Apache License 2.0"
readme = "README.md"
packages = [{include = "camlsys _ tutorials in federated learning"}]

[tool.poetry.dependencies]
python = "^3.8"
torch = "^1.13.1"
torchvision = "^0.14.1"
black = "^23.1.0"
isort = "^5.12.0"
tqdm = "^4.64.1"
flwr = {extras = ["simulation"], version = "^1.3.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
